# Flatmem-Mura-ALife-Labs

./: .gitignore  LICENSE  PAPER.md  README.md  pyproject.toml  setup.py
bench/: README.md  __init__.py  adapters.py  datasets.py  interface.py  mnist_full.py  permuted_digits_results.json  permuted_mnist.py  permuted_mnist_full_results.json  plot.py  run.py  split_digits_results.json  split_mnist.py  split_mnist_full_results.json  torch_adapter.py
examples/: 01_text_organism.py  02_maze_agent.py  03_boids_memory.py  04_chemotaxis.py
flatmem/: __init__.py  core.py  encoders.py
paper/: Makefile  README.md  paper.tex  references.bib
paper/figures/: fig1_substrate_flat.py  fig2_no_forgetting.py  fig3_separation.py  fig4_vision_results.py
tests/: test_basics.py  test_universality.py
